--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
                 <name><span class="name">Mehmet Yigit Avci</span></name>
               </p>
               <p style="text-align:justify">
-                I am currently PhD student at <a href="https://www.kcl.ac.uk/"> King's College London.</a> funded by <a href="https://www.drive-health.org.uk/"> DRIVE-Health</a> and <a href="https://www.deepc.ai/"> deepc</a> .
+                I am a PhD student at <a href="https://www.kcl.ac.uk/">King's College London</a>, funded by <a href="https://www.drive-health.org.uk/">DRIVE-Health</a> and <a href="https://www.deepc.ai/">deepc</a>.
               </p>
               <p style="text-align:justify">
-                I received my BSc degree in Electrical & Electronics Engineering, at <a href="https://www.boun.edu.tr/en-US/Index"> Bogazici University</a>, where I have worked in <a href="https://vavlab.boun.edu.tr/">VAVlab</a> with <a href="https://vavlab.boun.edu.tr/burak-acar-phd">Prof. Burak Acar</a>  on Alzheimer Detection using brain connectomes. 
+                I earned my BSc in Electrical & Electronics Engineering from <a href="https://www.boun.edu.tr/en-US/Index">Bogazici University</a>, where I researched Alzheimer's detection using brain connectomes in <a href="https://vavlab.boun.edu.tr/">VAVlab</a> under the guidance of <a href="https://vavlab.boun.edu.tr/burak-acar-phd">Prof. Burak Acar</a>.
               </p>
               <p style="text-align:justify">
-                I have worked with <a href="https://martinos.org/~berkin/"> Prof. Berkin Bilgic</a> and <a href="https://birthlab.github.io/pi.html"> Prof. Qiyuan Tian</a> at <a href="https://www.martinos.org/"> Athinoula A. Martinos Center for Biomedical Imaging</a>. on intersection of diffusion MRI and deep learning.
+                I have worked with <a href="https://martinos.org/~berkin/">Prof. Berkin Bilgic</a> and <a href="https://birthlab.github.io/pi.html">Prof. Qiyuan Tian</a> at the <a href="https://www.martinos.org/">Athinoula A. Martinos Center for Biomedical Imaging</a>, focusing on the intersection of diffusion MRI and deep learning.
               </p>
               <p style="text-align:justify">
-                I also worked as part of <a href="https://compai-lab.github.io/"> COMPAI Lab</a> as an intern under supervision of <a href="https://compai-lab.github.io/author/julia-a.-schnabel/"> Prof. Julia Schnabel</a> and <a href="https://compai-lab.github.io/author/veronika-zimmer/"> Veronika Zimmer, PhD</a> and <a href="https://ci.bercea.net/"> Cosmin Bercea</a> on unsupervised representation learning for Alzheimer's Disease.
+                Additionally, I completed an internship with the <a href="https://compai-lab.github.io/">COMPAI Lab</a> under the supervision of <a href="https://compai-lab.github.io/author/julia-a.-schnabel/">Prof. Julia Schnabel</a>, <a href="https://compai-lab.github.io/author/veronika-zimmer/">Dr. Veronika Zimmer</a>, and <a href="https://ci.bercea.net/">Dr. Cosmin Bercea</a>, working on unsupervised representation learning for Alzheimer's disease.
               </p>
               <p style="text-align:justify">
-                I am currently working with <a href="https://www.kcl.ac.uk/people/jorge-cardoso"> Dr. Jorge Cardoso</a> on AI-based smart orchestration!
-              </p>              
-              <p style="text-align:center">
+                Currently, I am supevised by <a href="https://www.kcl.ac.uk/people/jorge-cardoso">Dr. Jorge Cardoso</a> on AI-based smart orchestration for my PhD studies.
+              </p>
+              <p style="text-align:center">              
                 <a href="mailto:yigitavci32@gmail.com"><i class="fas fa-envelope fa-2x"></i></a> &nbsp  &nbsp
-                <a href="data/YigitAvci_CV_6_sep_2023.pdf" target="_blank"><i class="ai ai-cv ai-2x"></i></a> &nbsp  &nbsp
+                <a href="data/MehmetYigitAvci_CV_7_Nov_2024.pdf" target="_blank"><i class="ai ai-cv ai-2x"></i></a> &nbsp  &nbsp
                 <a href="https://linkedin.com/in/mehmet-yigit-avci" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a> &nbsp  &nbsp
                 <a href="https://scholar.google.com/citations?user=G-x5LvkAAAAJ&hl=en"><i class="ai ai-google-scholar ai-2x"></i></a> &nbsp &nbsp
                 <a href="https://github.com/myigitavci" target="_blank"><i class="fab fa-github fa-2x"></i></a>
@@ -59,7 +59,7 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <strong>Research Interests</strong>
             <p>
-              <i class="fas fa-chevron-right fa-1x"></i>  Medical Image Analysis, MRI, Deep Learning, Unsupervised Learning
+              <i class="fas fa-chevron-right fa-1x"></i>  Medical Image Analysis, MRI, Deep Learning, Unsupervised Learning, Multi-Modal Learning
             </p>
           </td>
           </tr>
