--- a/index.html
+++ b/index.html
@@ -529,6 +529,14 @@
           <h2 class="section-title">Recent Updates</h2>
           <ul class="updates-list">
             <li class="update-item">
+              <div class="update-date">July 2025</div>
+              <div>MR-CLIP accepted at MICCAI MLMI Workshop 2025</div>
+            </li>
+            <li class="update-item">
+              <div class="update-date">April 2025</div>
+              <div>Presented ZS-PRIME at ISMRM 2025</div>
+            </li>
+            <li class="update-item">
               <div class="update-date">October 2024</div>
               <div>Started my PhD at King's College London</div>
             </li>
