--- a/index.html
+++ b/index.html
@@ -80,16 +80,14 @@
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 1rem;
-      background: linear-gradient(45deg, #fff, #f0f4ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
+      color: white;
     }
 
     .title {
       font-size: 1.2rem;
       font-weight: 400;
       margin-bottom: 1.5rem;
+      color: white;
       opacity: 0.9;
     }
 
@@ -121,6 +119,8 @@
       padding: 0.5rem;
       border-radius: 50%;
       background: rgba(255, 255, 255, 0.1);
+      text-decoration: none;
+      display: inline-block;
     }
 
     .social-links a:hover {
@@ -440,17 +440,17 @@
             <h1 class="name">Mehmet Yigit Avci</h1>
             <p class="title">Medical AI Researcher & PhD Student</p>
             <p class="about-text">
-              I am a PhD student at <a href="https://www.kcl.ac.uk/">King's College London</a>, funded by <a href="https://www.drive-health.org.uk/">DRIVE-Health</a> and <a href="https://www.deepc.ai/">deepc</a>. My research focuses on AI-based smart orchestration for medical imaging.
+              I am a PhD student at <a href="https://www.kcl.ac.uk/">King's College London</a>, funded by <a href="https://www.drive-health.org.uk/">DRIVE-Health</a> and <a href="https://www.deepc.ai/">deepc</a>. My research focuses on developing AI-powered solutions for medical imaging, with particular emphasis on MRI analysis, unsupervised learning, and multi-modal medical data processing.
             </p>
           </div>
           <img src="images/YigitAvci_circlee.JPG" alt="Mehmet Yigit Avci" class="profile-image">
         </div>
         
         <div class="social-links">
-          <a href="mailto:yigitavci32@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+          <a href="mailto:yigitavci32@gmail.com" title="Email" target="_blank"><i class="fas fa-envelope"></i></a>
           <a href="data/MehmetYigitAvci_CV_6_Aug_2025.pdf" target="_blank" title="CV"><i class="ai ai-cv"></i></a>
           <a href="https://linkedin.com/in/mehmet-yigit-avci" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-          <a href="https://scholar.google.com/citations?user=G-x5LvkAAAAJ&hl=en" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
+          <a href="https://scholar.google.com/citations?user=G-x5LvkAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
           <a href="https://github.com/myigitavci" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
         </div>
       </div>
@@ -459,16 +459,16 @@
         <div class="section">
           <h2 class="section-title">About Me</h2>
           <p class="about-text">
-            I earned my BSc in Electrical & Electronics Engineering from <a href="https://www.boun.edu.tr/en-US/Index">Bogazici University</a>, where I researched Alzheimer's detection using brain connectomes in <a href="https://vavlab.boun.edu.tr/">VAVlab</a> under the guidance of <a href="https://vavlab.boun.edu.tr/burak-acar-phd">Prof. Burak Acar</a>.
+            I am passionate about advancing medical AI technologies that can improve patient care and clinical decision-making. My journey in medical imaging began during my undergraduate studies at <a href="https://www.boun.edu.tr/en-US/Index">Bogazici University</a>, where I worked on Alzheimer's disease detection using brain connectomes in the <a href="https://vavlab.boun.edu.tr/">VAVlab</a> under the guidance of <a href="https://vavlab.boun.edu.tr/burak-acar-phd">Prof. Burak Acar</a>.
           </p>
           <p class="about-text">
-            I have worked with <a href="https://martinos.org/~berkin/">Prof. Berkin Bilgic</a> and <a href="https://birthlab.github.io/pi.html">Prof. Qiyuan Tian</a> at the <a href="https://www.martinos.org/">Athinoula A. Martinos Center for Biomedical Imaging</a>, focusing on the intersection of diffusion MRI and deep learning.
+            During my research career, I have had the privilege of collaborating with leading experts in the field. At the <a href="https://www.martinos.org/">Athinoula A. Martinos Center for Biomedical Imaging</a>, I worked with <a href="https://martinos.org/~berkin/">Prof. Berkin Bilgic</a> and <a href="https://birthlab.github.io/pi.html">Prof. Qiyuan Tian</a> on cutting-edge diffusion MRI techniques and deep learning applications. This experience deepened my understanding of the intersection between advanced imaging technologies and artificial intelligence.
           </p>
           <p class="about-text">
-            Additionally, I completed an internship with the <a href="https://compai-lab.github.io/">COMPAI Lab</a> under the supervision of <a href="https://compai-lab.github.io/author/julia-a.-schnabel/">Prof. Julia Schnabel</a>, <a href="https://compai-lab.github.io/author/veronika-zimmer/">Dr. Veronika Zimmer</a>, and <a href="https://ci.bercea.net/">Dr. Cosmin Bercea</a>, working on unsupervised representation learning for Alzheimer's disease.
+            I also completed a research internship with the <a href="https://compai-lab.github.io/">COMPAI Lab</a> at King's College London, working under the supervision of <a href="https://compai-lab.github.io/author/julia-a.-schnabel/">Prof. Julia Schnabel</a>, <a href="https://compai-lab.github.io/author/veronika-zimmer/">Dr. Veronika Zimmer</a>, and <a href="https://ci.bercea.net/">Dr. Cosmin Bercea</a>. This collaboration focused on unsupervised representation learning for Alzheimer's disease, resulting in innovative approaches to medical image analysis.
           </p>
           <p class="about-text">
-            Currently, I am supervised by <a href="https://www.kcl.ac.uk/people/jorge-cardoso">Dr. Jorge Cardoso</a> on AI-based smart orchestration for my PhD studies.
+            Currently, I am pursuing my PhD at King's College London under the supervision of <a href="https://www.kcl.ac.uk/people/jorge-cardoso">Dr. Jorge Cardoso</a>, where I am developing AI-based smart orchestration systems for medical imaging workflows. My research aims to create intelligent systems that can automatically optimize imaging protocols, improve image quality, and enhance diagnostic accuracy across various medical imaging modalities.
           </p>
         </div>
 
