--- a/index.html
+++ b/index.html
@@ -99,16 +99,20 @@
     }
 
     .header .about-text a {
-      color: #f0f4ff;
+      color: #2d3748;
       text-decoration: none;
       font-weight: 500;
       font-size: 1.1rem;
       transition: color 0.3s ease;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 2px 6px;
+      border-radius: 4px;
     }
 
     .header .about-text a:hover {
-      color: white;
+      color: #1a202c;
       text-decoration: underline;
+      background: rgba(255, 255, 255, 1);
     }
 
     .profile-image {
@@ -473,7 +477,7 @@
         
         <div class="social-links">
           <a href="mailto:yigitavci32@gmail.com" title="Email" target="_blank"><i class="fas fa-envelope"></i></a>
-          <a href="data/MehmetYigitAvci_CV_6_Aug_2025.pdf" target="_blank" title="CV"><i class="ai ai-cv"></i></a>
+          <a href="data/MehmetYigitAvci_CV_6_aug_2025.pdf" target="_blank" title="CV"><i class="ai ai-cv"></i></a>
           <a href="https://linkedin.com/in/mehmet-yigit-avci" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
           <a href="https://scholar.google.com/citations?user=G-x5LvkAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
           <a href="https://github.com/myigitavci" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
@@ -614,7 +618,7 @@
                   <a href="https://github.com/myigitavci/MR-CLIP">Code</a>
                 </div>
                 <p class="project-description">
-                  MR-CLIP is a multimodal contrastive learning framework that aligns MR images with their DICOM metadata to learn contrast-aware representations without requiring manual labels. Trained on diverse clinical data, it enables robust, anatomy-invariant representations for tasks like cross-modal retrieval and contrast classification, even in the presence of incomplete or noisy metadata.
+                  <strong>MICCAI MLMI Workshop 2025</strong> - MR-CLIP is a multimodal contrastive learning framework that aligns MR images with their DICOM metadata to learn contrast-aware representations without requiring manual labels. Trained on diverse clinical data, it enables robust, anatomy-invariant representations for tasks like cross-modal retrieval and contrast classification, even in the presence of incomplete or noisy metadata.
                 </p>
               </div>
             </div>
@@ -631,7 +635,7 @@
                   <a href="https://github.com/myigitavci/zs-prime">Code</a>
                 </div>
                 <p class="project-description">
-                  ZS-PRIME combines advanced field map estimation (PRIME) with zero-shot self-supervised training, achieving distortion-free, high-resolution multi-shot diffusion MRI from undersampled data. This obviates the dependency on external training datasets, setting a new benchmark for efficient, high-fidelity diffusion MRI.
+                  <strong>ISMRM 2025</strong> - ZS-PRIME combines advanced field map estimation (PRIME) with zero-shot self-supervised training, achieving distortion-free, high-resolution multi-shot diffusion MRI from undersampled data. This obviates the dependency on external training datasets, setting a new benchmark for efficient, high-fidelity diffusion MRI.
                 </p>
               </div>
             </div>
@@ -648,7 +652,7 @@
                   <a href="https://arxiv.org/abs/2407.03863">arXiv</a>
                 </div>
                 <p class="project-description">
-                  We present MORPHADE (Morphological Autoencoders for Alzheimer's Disease Detection), a novel unsupervised learning approach which uses deformations to allow the analysis of 3D T1-weighted brain images. To the best of our knowledge, this is the first use of deformations with deep unsupervised learning to not only detect, but also localize and assess the severity of structural changes in the brain due to AD.
+                  <strong>MICCAI EMERGE Workshop 2024 (Best Paper Award)</strong> - We present MORPHADE (Morphological Autoencoders for Alzheimer's Disease Detection), a novel unsupervised learning approach which uses deformations to allow the analysis of 3D T1-weighted brain images. To the best of our knowledge, this is the first use of deformations with deep unsupervised learning to not only detect, but also localize and assess the severity of structural changes in the brain due to AD.
                 </p>
               </div>
             </div>
@@ -664,7 +668,7 @@
                   <a href="https://doi.org/10.1117/1.JMI.11.2.024013">Journal Paper</a>
                 </div>
                 <p class="project-description">
-                  This work's goal is to provide a simulation framework for routine neuroimaging test data, which allows for "stress testing" of deep segmentation networks against acquisition shifts that commonly occur in clinical practice for T2w FLAIR MRI protocols.
+                  <strong>Journal of Medical Imaging, 2024</strong> - This work's goal is to provide a simulation framework for routine neuroimaging test data, which allows for "stress testing" of deep segmentation networks against acquisition shifts that commonly occur in clinical practice for T2w FLAIR MRI protocols.
                 </p>
               </div>
             </div>
@@ -681,7 +685,7 @@
                   <a href="https://www.lpi.tel.uva.es/quad22/Results.html">QUAD Results</a>
                 </div>
                 <p class="project-description">
-                  Participated in <a href="https://www.lpi.tel.uva.es/quad22/index.html">QUAD Challenge in MICCAI 2022</a> and got the 4th place with combination of methods <a href="https://arxiv.org/abs/2112.01587">DUnet</a> and <a href="https://github.com/qiyuantian/DeepDTI">deepDTI</a>.
+                  <strong>ISMRM 2023, NeuroImage: Clinical, 2023</strong> - Participated in <a href="https://www.lpi.tel.uva.es/quad22/index.html">QUAD Challenge in MICCAI 2022</a> and got the 4th place with combination of methods <a href="https://arxiv.org/abs/2112.01587">DUnet</a> and <a href="https://github.com/qiyuantian/DeepDTI">deepDTI</a>.
                 </p>
               </div>
             </div>
@@ -698,7 +702,7 @@
                   <a href="https://arxiv.org/abs/2112.01587">arXiv</a>
                 </div>
                 <p class="project-description">
-                  Dropout is conventionally used during the training phase as regularization method and for quantifying uncertainty in deep learning. We propose to use dropout during training as well as inference steps, and average multiple predictions to improve the accuracy, while reducing and quantifying the uncertainty.
+                  <strong>ISMRM 2022</strong> - Dropout is conventionally used during the training phase as regularization method and for quantifying uncertainty in deep learning. We propose to use dropout during training as well as inference steps, and average multiple predictions to improve the accuracy, while reducing and quantifying the uncertainty.
                 </p>
               </div>
             </div>
@@ -707,9 +711,7 @@
       </div>
     </div>
 
-    <div class="footer">
-      <p>Template inspired by <a href="https://jonbarron.info/" target="_blank">Jon Barron's website</a> | Designed with ❤️ for Medical AI Research</p>
-    </div>
+
   </div>
 
   <a href="#top" class="back-to-top" id="backToTop">
