--- a/index.html
+++ b/index.html
@@ -99,23 +99,16 @@
     }
 
     .header .about-text a {
-      color: #2d3748;
+      color: rgba(255, 255, 255, 0.9);
       text-decoration: none;
-      font-weight: 600;
+      font-weight: 500;
       font-size: 1rem;
-      transition: all 0.3s ease;
-      background: rgba(255, 255, 255, 0.95);
-      padding: 4px 8px;
-      border-radius: 6px;
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      transition: color 0.3s ease;
     }
 
     .header .about-text a:hover {
-      color: #1a202c;
-      background: rgba(255, 255, 255, 1);
-      transform: translateY(-1px);
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+      color: white;
+      text-decoration: underline;
     }
 
     .profile-image {
@@ -134,7 +127,7 @@
 
     .social-links {
       display: flex;
-      gap: 1.5rem;
+      gap: 1rem;
       justify-content: center;
       margin-top: 2rem;
       position: relative;
@@ -143,21 +136,25 @@
 
     .social-links a {
       color: white;
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       transition: all 0.3s ease;
-      padding: 0.5rem;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, 0.1);
+      padding: 0.8rem;
+      border-radius: 8px;
+      background: rgba(255, 255, 255, 0.15);
       text-decoration: none;
       display: inline-block;
       cursor: pointer;
       position: relative;
       z-index: 3;
+      min-width: 50px;
+      text-align: center;
+      border: 1px solid rgba(255, 255, 255, 0.2);
     }
 
     .social-links a:hover {
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.25);
       transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
 
     .content {
