--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     body {
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       line-height: 1.6;
-      color: #2d3748;
-      background: #faf9f6;
+      color: #1f2937;
+      background: #eef1f7;
       min-height: 100vh;
     }
 
@@ -32,7 +32,7 @@
       gap: 1.5rem;
       max-width: 1400px;
       margin: 0 auto;
-      padding: 2rem;
+      padding: 2.25rem;
     }
 
     .sidebar {
@@ -40,53 +40,61 @@
       top: 1.5rem;
       align-self: flex-start;
       width: 280px;
-      background: #111827;
+      background: linear-gradient(180deg, #0b1224 0%, #0f172a 100%);
       color: #e5e7eb;
-      border-radius: 18px;
-      padding: 1.75rem;
-      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+      border-radius: 20px;
+      padding: 2rem;
+      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.2);
       height: fit-content;
+      border: 1px solid rgba(255, 255, 255, 0.06);
     }
 
     .sidebar .logo {
-      font-size: 1.4rem;
+      font-size: 1.55rem;
       font-weight: 700;
-      margin-bottom: 0.75rem;
-      letter-spacing: -0.5px;
+      margin-bottom: 0.4rem;
+      letter-spacing: -0.6px;
     }
 
     .sidebar .role {
-      color: #9ca3af;
-      margin-bottom: 1.5rem;
+      color: #94a3b8;
+      margin-bottom: 1.75rem;
+      font-weight: 400;
     }
 
     .nav {
       list-style: none;
       display: flex;
       flex-direction: column;
-      gap: 0.4rem;
-      margin-bottom: 1.75rem;
+      gap: 0.35rem;
+      margin-bottom: 1.8rem;
     }
 
     .nav a {
       color: #e5e7eb;
       text-decoration: none;
-      padding: 0.75rem 0.9rem;
+      padding: 0.75rem 1rem;
       border-radius: 12px;
       transition: all 0.2s ease;
-      display: block;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      border: 1px solid transparent;
+      background: rgba(255, 255, 255, 0.02);
     }
 
     .nav a:hover {
-      background: rgba(255, 255, 255, 0.06);
+      background: rgba(255, 255, 255, 0.08);
       color: #fff;
-      transform: translateX(4px);
+      border-color: rgba(255, 255, 255, 0.1);
+      transform: translateX(3px);
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.15);
     }
 
     .sidebar .contact {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      gap: 0.6rem;
+      gap: 0.65rem;
     }
 
     .sidebar .contact a {
@@ -98,12 +106,13 @@
       text-align: center;
       transition: all 0.2s ease;
       border: 1px solid rgba(255, 255, 255, 0.08);
+      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
     }
 
     .sidebar .contact a:hover {
-      background: rgba(255, 255, 255, 0.12);
+      background: rgba(255, 255, 255, 0.14);
       color: #fff;
-      transform: translateY(-2px);
+      transform: translateY(-1px);
     }
 
     .container {
@@ -112,19 +121,19 @@
     }
 
     .main-card {
-      background: rgba(255, 255, 255, 0.98);
+      background: #ffffff;
       backdrop-filter: blur(10px);
-      border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+      border-radius: 22px;
+      box-shadow: 0 16px 40px rgba(15, 23, 42, 0.08);
       overflow: hidden;
       margin-bottom: 2rem;
-      border: 1px solid #e5e7eb;
+      border: 1px solid #e2e8f0;
     }
 
     .header {
-      background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
+      background: linear-gradient(135deg, #4338ca 0%, #6d28d9 50%, #8b5cf6 100%);
       color: white;
-      padding: 3rem 2.5rem;
+      padding: 3rem 2.75rem;
       text-align: left;
       position: relative;
       overflow: hidden;
@@ -260,7 +269,7 @@
     .section-title {
       font-size: 1.7rem;
       font-weight: 700;
-      color: #1f2937;
+      color: #0f172a;
       margin-bottom: 1.2rem;
       position: relative;
       padding-bottom: 0.35rem;
@@ -274,27 +283,27 @@
       left: 0;
       width: 60px;
       height: 3px;
-      background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
+      background: linear-gradient(135deg, #4338ca 0%, #6d28d9 100%);
       border-radius: 2px;
     }
 
     .about-text {
-      font-size: 1.1rem;
+      font-size: 1.05rem;
       line-height: 1.8;
-      color: #4a5568;
-      margin-bottom: 1.5rem;
+      color: #475569;
+      margin-bottom: 1.4rem;
     }
 
     .about-text a {
-      color: #667eea;
+      color: #4338ca;
       text-decoration: none;
-      font-weight: 500;
-      font-size: 1.1rem;
-      transition: color 0.3s ease;
+      font-weight: 600;
+      font-size: 1.05rem;
+      transition: color 0.25s ease;
     }
 
     .about-text a:hover {
-      color: #764ba2;
+      color: #6d28d9;
       text-decoration: underline;
     }
 
@@ -306,56 +315,63 @@
     }
 
     .interest-item {
-      background: #f8f9fa;
+      background: #ffffff;
       padding: 1rem;
-      border-radius: 10px;
-      border-left: 4px solid #667eea;
-      transition: all 0.3s ease;
+      border-radius: 12px;
+      border: 1px solid #e2e8f0;
+      border-left: 4px solid #4338ca;
+      transition: all 0.25s ease;
+      color: #1f2937;
+      box-shadow: 0 8px 18px rgba(15, 23, 42, 0.05);
     }
 
     .interest-item:hover {
-      background: #e9ecef;
-      transform: translateX(5px);
+      background: #f8fafc;
+      transform: translateY(-2px);
+      border-color: #6d28d9;
+      box-shadow: 0 12px 22px rgba(15, 23, 42, 0.08);
     }
 
     .education-item {
       display: flex;
       align-items: center;
       gap: 1rem;
-      padding: 1.5rem;
-      background: #f8f9fa;
-      border-radius: 12px;
+      padding: 1.4rem;
+      background: #ffffff;
+      border-radius: 14px;
       margin-bottom: 1rem;
-      transition: all 0.3s ease;
+      transition: all 0.25s ease;
+      border: 1px solid #e2e8f0;
+      box-shadow: 0 8px 18px rgba(15, 23, 42, 0.05);
     }
 
     .education-item:hover {
-      background: #e9ecef;
+      background: #f8fafc;
       transform: translateY(-2px);
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 12px 24px rgba(15, 23, 42, 0.08);
     }
 
     .education-icon {
       font-size: 1.5rem;
-      color: #667eea;
+      color: #4338ca;
       min-width: 40px;
     }
 
     .education-details h3 {
       font-size: 1.2rem;
-      font-weight: 600;
-      color: #2d3748;
+      font-weight: 700;
+      color: #111827;
       margin-bottom: 0.25rem;
     }
 
     .education-details p {
-      color: #718096;
+      color: #4b5563;
       font-size: 0.95rem;
     }
 
     .education-year {
-      color: #667eea;
-      font-weight: 500;
+      color: #6d28d9;
+      font-weight: 600;
     }
 
     .updates-list {
@@ -365,21 +381,25 @@
     .update-item {
       padding: 1rem;
       margin-bottom: 1rem;
-      background: #f8f9fa;
-      border-radius: 10px;
-      border-left: 4px solid #667eea;
-      transition: all 0.3s ease;
+      background: #ffffff;
+      border-radius: 12px;
+      border: 1px solid #e2e8f0;
+      border-left: 4px solid #4338ca;
+      transition: all 0.25s ease;
+      box-shadow: 0 8px 18px rgba(15, 23, 42, 0.05);
     }
 
     .update-item:hover {
-      background: #e9ecef;
-      transform: translateX(5px);
+      background: #f8fafc;
+      transform: translateY(-2px);
+      border-color: #6d28d9;
     }
 
     .update-date {
-      font-weight: 600;
-      color: #667eea;
-      margin-bottom: 0.5rem;
+      font-weight: 700;
+      color: #4338ca;
+      margin-bottom: 0.4rem;
+      letter-spacing: -0.2px;
     }
 
     .projects-grid {
@@ -392,9 +412,9 @@
       background: #fff;
       border-radius: 14px;
       overflow: hidden;
-      box-shadow: 0 10px 28px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 12px 26px rgba(15, 23, 42, 0.08);
       transition: all 0.25s ease;
-      border: 1px solid #e5e7eb;
+      border: 1px solid #e2e8f0;
       display: flex;
       flex-direction: column;
       min-height: 100%;
@@ -402,17 +422,18 @@
 
     .project-card:hover {
       transform: translateY(-4px);
-      box-shadow: 0 16px 32px rgba(0, 0, 0, 0.12);
+      box-shadow: 0 16px 32px rgba(15, 23, 42, 0.12);
+      border-color: #cbd5e1;
     }
 
     .project-image {
       width: 100%;
       height: 220px;
       object-fit: contain;
-      background: #f8f9fa;
+      background: #f8fafc;
       padding: 1rem;
       transition: transform 0.3s ease;
-      border-bottom: 1px solid #e5e7eb;
+      border-bottom: 1px solid #e2e8f0;
     }
 
     .project-card:hover .project-image {
@@ -424,26 +445,27 @@
     }
 
     .project-title {
-      font-size: 1.3rem;
-      font-weight: 600;
-      color: #2d3748;
-      margin-bottom: 1rem;
+      font-size: 1.25rem;
+      font-weight: 700;
+      color: #111827;
+      margin-bottom: 0.85rem;
       line-height: 1.4;
+      letter-spacing: -0.2px;
     }
 
     .project-title a {
       color: inherit;
       text-decoration: none;
-      transition: color 0.3s ease;
+      transition: color 0.25s ease;
     }
 
     .project-title a:hover {
-      color: #667eea;
+      color: #4338ca;
       text-decoration: underline;
     }
 
     .project-authors {
-      color: #718096;
+      color: #475569;
       font-size: 0.95rem;
       margin-bottom: 1rem;
       line-height: 1.5;
@@ -456,35 +478,37 @@
     }
 
     .project-links a {
-      color: #667eea;
+      color: #4338ca;
       text-decoration: none;
-      font-weight: 500;
-      font-size: 1rem;
+      font-weight: 600;
+      font-size: 0.95rem;
       padding: 0.5rem 1rem;
-      border: 1px solid #667eea;
+      border: 1px solid #4338ca;
       border-radius: 20px;
-      transition: all 0.3s ease;
+      transition: all 0.25s ease;
+      background: rgba(67, 56, 202, 0.06);
     }
 
     .project-links a:hover {
-      background: #667eea;
+      background: #4338ca;
       color: white;
+      box-shadow: 0 8px 16px rgba(67, 56, 202, 0.25);
     }
 
     .project-description {
-      color: #4a5568;
-      line-height: 1.6;
+      color: #475569;
+      line-height: 1.65;
     }
 
     .footer {
       text-align: center;
       padding: 2rem;
-      color: #718096;
+      color: #475569;
       font-size: 0.9rem;
     }
 
     .footer a {
-      color: #667eea;
+      color: #4338ca;
       text-decoration: none;
     }
 
@@ -492,7 +516,7 @@
       position: fixed;
       bottom: 2rem;
       right: 2rem;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #4338ca 0%, #6d28d9 100%);
       color: white;
       width: 50px;
       height: 50px;
@@ -501,7 +525,7 @@
       align-items: center;
       justify-content: center;
       text-decoration: none;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 10px 24px rgba(67, 56, 202, 0.35);
       transition: all 0.3s ease;
       opacity: 0;
       visibility: hidden;
@@ -577,7 +601,7 @@
       </ul>
       <div class="contact">
         <a href="mailto:yigitavci32@gmail.com" title="Email" target="_blank"><i class="fas fa-envelope"></i></a>
-        <a href="data/MehmetYigitAvci_CV_6_aug_2025.pdf" target="_blank" title="CV"><i class="ai ai-cv"></i></a>
+        <a href="data/MehmetYigitAvci_CV_11_dec_2025.pdf" target="_blank" title="CV"><i class="ai ai-cv"></i></a>
         <a href="https://linkedin.com/in/mehmet-yigit-avci" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="https://scholar.google.com/citations?user=G-x5LvkAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
         <a href="https://github.com/myigitavci" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
