--- a/index.html
+++ b/index.html
@@ -93,20 +93,21 @@
 
     .sidebar .contact {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 0.65rem;
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+      gap: 0.55rem;
     }
 
     .sidebar .contact a {
       color: #e5e7eb;
       text-decoration: none;
       background: rgba(255, 255, 255, 0.06);
-      padding: 0.65rem;
-      border-radius: 12px;
+      padding: 0.55rem;
+      border-radius: 10px;
       text-align: center;
       transition: all 0.2s ease;
       border: 1px solid rgba(255, 255, 255, 0.08);
       box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
+      font-size: 1.05rem;
     }
 
     .sidebar .contact a:hover {
